@@ -3,10 +3,18 @@ MAINTAINER Andrew Rosa
 
 RUN useradd -r -s /bin/false -m app
 USER app
-ADD . /home/app
+ADD project.clj /home/app/project.clj
+ADD src /home/app/src
 WORKDIR /home/app
 
 RUN lein uberjar
 WORKDIR /code
 
-CMD ["java", "-jar", "/home/app/target/codeclimate-kibit.jar", ".", "-C", "/config.json"]
+CMD \
+  [ "java" \
+  , "-XX:+UseParNewGC" \
+  , "-XX:MinHeapFreeRatio=5" \
+  , "-XX:MaxHeapFreeRatio=10" \
+  , "-jar", "/home/app/target/codeclimate-kibit.jar", "." \
+  , "-C", "/config.json" \
+  ]
